--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="social-icons">
             <a href="https://www.facebook.com/smit.anaghan.5" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/_.anaghan._009" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/_.anaghan._009" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a><br><br>
             <a href="https://wa.me/8866722633?text=" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
             <a href="https://msng.link/o?patel_6766=sc" class="snapchat"><i class="fab fa-snapchat"></i></a>
         </div>
