--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="inner-area">
                 <img src="Presentation5-1.png" alt="">
             </div>
-        </div><br><br><br><br><br>
+        </div><br><br><br><br>
         <div class="name">Anaghan Smit</div>
         <div class="about">Web Desingner & Coder
             <br><br><h1><i class="fas fa-user"></i> About:- <br></h1> • I Am A Bca Student <br> 
