--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="about">Web Desingner & Coder
             <br><br><h1><i class="fas fa-user"></i> About:- <br></h1> • I Am A Bca Student <br> 
             • 2nd Year <br><br> <h2><i class="fas fa-cake-candles"></i> Dob:- <br></h2> • 16th Octomber,2002 <br> 
-            • 21 year's Old <br><br> <h3><i class="fas fa-phone"></i> Contect Me At:- <br></h3> • +91 8866722633 <br><br><br><br><br><br>
+            • 21 year's Old <br><br> <h3><i class="fas fa-phone"></i> Contect Me At:- <br></h3> • +91 8866722633 <br><br><br><br>
         </div>
         <div class="social-icons">
             <a href="https://www.facebook.com/smit.anaghan.5" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
