--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="https://www.instagram.com/_.anaghan._009" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/8866722633?text=" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
             <a href="https://msng.link/o?patel_6766=sc" class="snapchat"><i class="fab fa-snapchat"></i></a>
+            <a href="https://t.me/smit_000975" class="telegram"><i class="fa-brands fa-telegram"></i></a>
         </div>
     </div>
 
