--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="social-icons">
             <a href="https://www.facebook.com/smit.anaghan.5" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/_.anaghan._009" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://wa.me/8866722633?text=Hii" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/8866722633?text=Hello" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
             <a href="https://msng.link/o?patel_6766=sc" class="snapchat"><i class="fab fa-snapchat"></i></a>
             <a href="https://t.me/smit_000975" class="telegram"><i class="fa-brands fa-telegram"></i></a>
         </div>
